optimizations for when to parallelize
Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>